devops/env/test/api-resource-patch.yaml
# Copyright 2021 The Province of British Columbia
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
---
kind: Deployment
apiVersion: apps/v1
metadata:
  labels:
    app: timemachine
  name: api
spec:
  template:
    spec:
      containers:
        - name: timemachine-api
          resources:
            limits:
              cpu: 250m
              memory: 1G
            requests:
              cpu: 100m
              memory: 640Mi
