devops/env/test/web-to-api-route.yaml
# Copyright 2021 The Province of British Columbia
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
---
apiVersion: v1
kind: Route
metadata:
  labels:
    app: timemachine
    component: api
  name: web-to-api
  annotations:
    haproxy.router.openshift.io/timeout: 90s
spec:
  host: web-ed57f0-test.apps.silver.devops.gov.bc.ca
  path: /api
  port:
    targetPort: 8080-tcp
  tls:
    insecureEdgeTerminationPolicy: Redirect
    terminationc: edge
  to:
    kind: Service
    name: api
    weight: 100
